--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/css/main.css">
 </head>
 <body>
-    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="popover" data-title="Hello World" data-content="Good Job">Click Me!</button>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="popover" data-title="Hello World" data-content="Good Job">Click Me!</button>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
