--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Document</title>
     <link rel="stylesheet" href="./src/css/main.css">
+
 </head>
 <body>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="popover" data-title="Hello World" data-content="Good Job">Click Me!</button>
+    <button type="button" class="btn btn-primary btn-lg m-5" data-toggle="popover" data-title="Hello World" data-content="Good Job">Click Me!</button>
 
+    <script src="./src/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="./src/js/script.js"></script>
 </body>
 </html>
