--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
 </head>
 <body>
-    <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Toggle popover</a>
+    <button type="button" class="btn btn-primary btn-lg m-5" data-toggle="popover" data-title="Hello World" data-content="Good Job">Click Me!</button>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="./src/js/script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script>
+        $(() => {
+            $('[data-toggle="popover"]').popover();
+        });
+    </script>
 </body>
 </html>
