--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Document</title>
     <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <button type="button" class="btn btn-primary btn-lg m-5" data-bs-toggle="popover" data-bs-title="Hello World" data-bs-content="Good Job">Click Me!</button>
+    <button type="button" class="btn btn-primary btn-lg m-5" data-bs-toggle="popover" data-bs-custom-class="custom-popover" data-bs-title="Hello World" data-bs-content="Good Job">Click Me!</button>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
