--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="d-flex justify-content-center align-items-center" style="height: 90vh;">
 
-    <button type="button" class="btn btn-primary btn-lg m-lg-5" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="top" data-bs-custom-class="custom-popover" data-bs-title="Hello World" data-bs-content="Good Job">Click Me!</button>
+    <button type="button" class="btn btn-primary btn-lg m-lg-5" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="top" data-bs-custom-class="custom-popover" data-bs-title="Hello World" data-bs-content="Good Job">Hover Me!</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
