--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./src/css/main.css">
 </head>
-<body class="d-flex justify-content-center align-items-center" style="height: 90vh;">
+<body>
 
     <button type="button" class="btn btn-primary btn-lg m-lg-5" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="top" data-bs-custom-class="custom-popover" data-bs-title="Hello World" data-bs-content="Good Job">Hover Me!</button>
+
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuemin="0" aria-valuenow="25" aria-valuemax="100"></div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
