--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuemin="0" aria-valuenow="25" aria-valuemax="100"></div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="./src/js/script.js"></script>
 </body>
