--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="header">
-        <section id="header_top">
+        <section id="header_top" class="bg-primary py-3 d-none d-md-block">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 pt-2"></div>
