--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
         <section id="header_top" class="bg-primary py-3 d-none d-md-block">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2"></div>
-                    <div class="col-md-4 pt-2"></div>
-                    <div class="col-md-4 text-end"></div>
+                    <div class="col-md-4 pt-2">
+                        <h6>
+                            <i class="bi bi-phone"></i> +123 456 78 90
+                        </h6>
+                    </div>
+                    <div class="col-md-4 pt-2">
+                        <h6>
+                            <i class="bi bi-envelope"></i> user@domain.com
+                        </h6>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <a href="#" class="btn btn-primary text-white bg-warning">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
