--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                         <a href="#" class="btn btn-primary text-white bg-warning">
                             <i class="bi bi-facebook"></i>
                         </a>
+                        <a href="#" class="btn btn-primary text-white bg-warning">
+                            <i class="bi bi-twitter"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary text-white bg-warning">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary text-white bg-warning">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </div>
                 </div>
             </div>
