--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <header id="header">
-        <section id="header_top" class="bg-primary py-3 d-none d-md-block">
+        <section id="header_top" class="bg-dark py-3 d-none d-md-block">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
                     </div>
-                    <div class="col-md-4 pt-2">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
                     </div>
-                    <div class="col-md-4 text-end">
-                        <a href="#" class="btn btn-primary text-white bg-warning">
+                    <div class="col-md-4 text-center">
+                        <a href="#" class="btn btn-primary text-white" style="background: #166FE5;">
                             <i class="bi bi-facebook"></i>
                         </a>
                         <a href="#" class="btn btn-primary text-white bg-warning">
