--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                         </h6>
                     </div>
                     <div class="col-md-4 text-center">
-                        <a href="#" class="btn btn-primary text-white" style="background: #166FE5;">
+                        <a href="#" class="btn text-white" style="background: #166FE5;">
                             <i class="bi bi-facebook"></i>
                         </a>
-                        <a href="#" class="btn btn-primary text-white bg-warning">
+                        <a href="#" class="btn text-white" style="background: #1D9BF0;">
                             <i class="bi bi-twitter"></i>
                         </a>
-                        <a href="#" class="btn btn-primary text-white bg-warning">
+                        <a href="#" class="btn text-white" style="background: #F70269;">
                             <i class="bi bi-instagram"></i>
                         </a>
-                        <a href="#" class="btn btn-primary text-white bg-warning">
+                        <a href="#" class="btn text-white" style="background: #0274B3;">
                             <i class="bi bi-linkedin"></i>
                         </a>
                     </div>
