--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                 </div>
             </div>
         </section>
+
+        <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3 sticky-top">
+            <div class="container">
+                <a href="#" class="navbar-brand">Learn Code</a>
+            </div>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="navMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </nav>
     </header>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
