--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div id="navMenu" class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    
+                </ul>
+            </div>
         </nav>
     </header>
 
