--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Service</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
