--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="#" class="nav-link">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Team</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
