--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#" class="nav-link">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
