--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#" class="nav-link">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
