--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                         <a href="#service" class="nav-link">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Team</a>
+                        <a href="#team" class="nav-link">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">FAQ</a>
+                        <a href="#faq" class="nav-link">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
