--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <a href="#" class="navbar-brand">Learn Code</a>
             </div>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="navMenu">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navMenu" class="collapse navbar-collapse">
