--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </section>
 
         <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3 sticky-top">
-            <div class="container">
+            <div class="container w-50 d-flex justify-content-center">
                 <a href="#" class="navbar-brand">Learn Code</a>
             </div>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="navMenu" class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
+            <div id="navMenu" class="collapse navbar-collapse d-flex justify-content-center">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
@@ -59,9 +59,6 @@
                     </li>
                     <li class="nav-item">
                         <a href="#team" class="nav-link">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#faq" class="nav-link">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
