--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section id="hero_area" class="py-5 bg-light">
+            
+        </section>
+    </main>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
