--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
     </header>
     <main>
         <section id="hero_area" class="py-5 bg-light">
-            
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 align-items-center">
+                        <h3>Let's Learn Coding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore beatae necessitatibus aspernatur dolorum, magnam dolorem! Laborum omnis totam saepe quia.</p>
+                        <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#join">Join Now</a>
+                    </div>
+                    <div class="col-md-6"></div>
+                </div>
+            </div>
         </section>
     </main>
 
