--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                         <h3>Let's Learn Coding</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore beatae necessitatibus aspernatur dolorum, magnam dolorem! Laborum omnis totam saepe quia.</p>
                         <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#join">Join Now</a>
+                        <div class="modal fade" id="join">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-dark">Join Now</h5>
+                                        <button type="button" class="btn-close"></button>
+                                    </div>
+                                    <div class="modal-body"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6"></div>
                 </div>
