--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                                                 <label for="name" class="form-label">Name</label>
                                                 <input type="text" id="name" class="form-control">
                                             </div>
+                                            <div class="mb-3">
+                                                <label for="email" class="form-label">Email</label>
+                                                <input type="email" id="email" class="form-control">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="phone" class="form-label">Phone</label>
+                                                <input type="text" id="phone" class="form-control" pattern="[0-9]">
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
