--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@
                                             </div>
                                             <div class="mb-3">
                                                 <label for="phone" class="form-label">Phone</label>
-                                                <input type="text" id="phone" class="form-control" pattern="[0-9]">
+                                                <input type="text" id="phone" class="form-control" pattern="[\d*]">
                                             </div>
                                         </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
