--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
+                        <img src="./src/img/coder.svg" alt="Coder Image">
+                    </div>
                 </div>
             </div>
         </section>
