--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="hero_area" class="py-5 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 align-items-center">
+                    <div class="col-md-6 align-self-center">
                         <h3>Let's Learn Coding</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore beatae necessitatibus aspernatur dolorum, magnam dolorem! Laborum omnis totam saepe quia.</p>
                         <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#join">Join Now</a>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="./src/img/coder.svg" alt="Coder Image">
+                        <img src="./src/img/coder.svg" class="img-fluid" alt="Coder Image">
                     </div>
                 </div>
             </div>
