--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header id="header">
-        <section id="header_top" class="bg-dark py-3 d-none d-md-block">
+        <section id="top_header" class="bg-dark py-3 d-none d-md-block">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2 text-white text-center">
+                    <div class="col-md-4 pt-2 text-white">
                         <h6>
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
                     </div>
-                    <div class="col-md-4 pt-2 text-white text-center">
+                    <div class="col-md-4 pt-2 text-white">
                         <h6>
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-end">
                         <a href="#" class="btn text-white" style="background: #166FE5;">
                             <i class="bi bi-facebook"></i>
                         </a>
@@ -40,14 +40,14 @@
         </section>
 
         <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3 sticky-top">
-            <div class="container w-50 d-flex justify-content-center">
+            <div class="container">
                 <a href="#" class="navbar-brand">Learn Code</a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="navMenu" class="collapse navbar-collapse d-flex justify-content-center">
-                <ul class="navbar-nav">
+            <div id="navMenu" class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
