--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             </div>
         </section>
 
-        <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3 sticky-top">
+        <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top">
             <div class="container">
-                <a href="#" class="navbar-brand">Learn Code</a>
+                <a href="#" class="navbar-brand w-50 text-center">Learn Code</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
             <div id="navMenu" class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
@@ -56,6 +56,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="#service" class="nav-link">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#analysis" class="nav-link">Analysis</a>
                     </li>
                     <li class="nav-item">
                         <a href="#team" class="nav-link">Team</a>
@@ -107,8 +110,91 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 pt-4">
                         <img src="./src/img/coder.svg" class="img-fluid" alt="Coder Image">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-5" id="service">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 text-center mb-3">
+                        <div class="card">
+                            <i class="bi bi-gear m-auto d-block btn-outline-primary pt-2 my-3"></i>
+                            <h4>Easy to Use</h4>
+                            <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus nulla ab repudiandae ut eveniet, omnis aliquid eius exercitationem placeat sit.</p>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center mb-3">
+                        <div class="card">
+                            <i class="bi bi-graph-up-arrow m-auto d-block btn-outline-primary pt-2 my-3"></i>
+                            <h4>Awesome Design</h4>
+                            <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus nulla ab repudiandae ut eveniet, omnis aliquid eius exercitationem placeat sit.</p>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center mb-3">
+                        <div class="card">
+                            <i class="bi bi-people m-auto d-block btn-outline-primary pt-2 my-3"></i>
+                            <h4>Easy to Customize</h4>
+                            <p class="m-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus nulla ab repudiandae ut eveniet, omnis aliquid eius exercitationem placeat sit.</p>
+                            <a href="#" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-light py-5" id="analysis">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 pt-5">
+                        <img src="./src/img/Investing.svg" class="img-fluid" alt="Investing">
+                    </div>
+                    <div class="col-md-6 align-self-center">
+                        <h3>Analysis for Business Opportunities</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illo labore possimus aspernatur et numquam facere, tenetur sint suscipit, magni deserunt obcaecati, temporibus vitae eum! Sequi nisi nam rem alias?</p>
+                        <a href="#" class="btn btn-primary">See More Information</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="team" class="py-5">
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col-md-8 offset-md-2">
+                        <h2>Our Team</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, deleniti.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
+                                <h4>David Clark</h4>
+                                <p>Web Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
+                                <h4>David Clark</h4>
+                                <p>Web Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
+                                <h4>David Clark</h4>
+                                <p>Web Designer</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
