--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
                     <div class="col-md-4 mb-3">
                         <div class="card">
                             <div class="card-body text-center">
-                                <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
+                                <img src="./src/img/team_02.jpg" class="img-fluid mb-3" alt="Team">
                                 <h4>David Clark</h4>
-                                <p>Web Designer</p>
+                                <p>Graphic Designer</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card">
                             <div class="card-body text-center">
-                                <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
+                                <img src="./src/img/team_03.jpg" class="img-fluid mb-3" alt="Team">
                                 <h4>David Clark</h4>
-                                <p>Web Designer</p>
+                                <p>Web Developer</p>
                             </div>
                         </div>
                     </div>
