--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@
                                 <img src="./src/img/team_01.jpg" class="img-fluid mb-3" alt="Team">
                                 <h4>David Clark</h4>
                                 <p>Web Designer</p>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-twitter"></i>
+                                </a>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-youtube"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -184,6 +193,9 @@
                                 <img src="./src/img/team_02.jpg" class="img-fluid mb-3" alt="Team">
                                 <h4>David Clark</h4>
                                 <p>Graphic Designer</p>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -193,6 +205,9 @@
                                 <img src="./src/img/team_03.jpg" class="img-fluid mb-3" alt="Team">
                                 <h4>David Clark</h4>
                                 <p>Web Developer</p>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
