--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
                                 <a href="#" class="btn btn-primary">
                                     <i class="bi bi-facebook"></i>
                                 </a>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-twitter"></i>
+                                </a>
+                                <a href="#" class="btn btn-primary">
+                                    <i class="bi bi-youtube"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
