--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section id="contact" class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7"></div>
+                    <div class="col-md-5"></div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
