--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                 <div class="row">
                     <div class="col-md-7">
                         <h2>Contact Us</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, beatae!</p>
                     </div>
                     <div class="col-md-5">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20467.87723347871!2d8.6540392!3d50.1146523!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd0ead0e55bb91%3A0xbecdaf6e6dc1bd28!2sAlte%20Oper!5e0!3m2!1sen!2str!4v1687800101887!5m2!1sen!2str" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
