--- a/index.html
+++ b/index.html
@@ -239,22 +239,22 @@
                         <form class="py-3">
                             <div class="row">
                                 <div class="mb-3 col-md-6">
-                                <label for="contact-name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="contact-name">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="contact-email" class="form-label">Email</label>
-                                <input type="text" class="form-control" id="contact-email">
-                            </div>
-                            <div class="mb-3">
-                                <label for="contact-subject" class="form-label">Subject</label>
-                                <input type="text" class="form-control" id="contact-subject">
-                            </div>
-                            <div class="mb-3">
-                              <label for="contact-message" class="form-label">Message</label>
-                              <textarea class="form-control" id="contact-message" rows="6"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send</button>
+                                    <label for="contact-name" class="form-label">Name</label>
+                                    <input type="text" class="form-control" id="contact-name">
+                                </div>
+                                <div class="mb-3 col-md-6">
+                                    <label for="contact-email" class="form-label">Email</label>
+                                    <input type="text" class="form-control" id="contact-email">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="contact-subject" class="form-label">Subject</label>
+                                    <input type="text" class="form-control" id="contact-subject">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="contact-message" class="form-label">Message</label>
+                                    <textarea class="form-control" id="contact-message" rows="6"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary col-6 mx-auto">Send</button>
                             </div>
                         </form>
                     </div>
