--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <img src="./src/img/team_02.jpg" class="img-fluid mb-3" alt="Team">
-                                <h4>David Clark</h4>
+                                <h4>William Donaldson</h4>
                                 <p>Graphic Designer</p>
                                 <a href="#" class="btn btn-primary">
                                     <i class="bi bi-facebook"></i>
@@ -210,7 +210,7 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <img src="./src/img/team_03.jpg" class="img-fluid mb-3" alt="Team">
-                                <h4>David Clark</h4>
+                                <h4>Charlie Beckett</h4>
                                 <p>Web Developer</p>
                                 <a href="#" class="btn btn-primary">
                                     <i class="bi bi-facebook"></i>
@@ -260,6 +260,18 @@
                     </div>
                     <div class="col-md-5">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20467.87723347871!2d8.6540392!3d50.1146523!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd0ead0e55bb91%3A0xbecdaf6e6dc1bd28!2sAlte%20Oper!5e0!3m2!1sen!2str!4v1687800101887!5m2!1sen!2str" width="800" height="600" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pt-4 pb-2 bg-primary text-white text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>&copy; 2023 Fogo Software</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>All Rights Reserved</p>
                     </div>
                 </div>
             </div>
