--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <section id="top_header" class="bg-dark py-3 d-none d-md-block">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2 text-white">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
                     </div>
-                    <div class="col-md-4 pt-2 text-white">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
                     </div>
-                    <div class="col-md-4 text-end">
+                    <div class="col-md-4 text-center">
                         <a href="#" class="btn text-white" style="background: #166FE5;">
                             <i class="bi bi-facebook"></i>
                         </a>
