--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="header">
-        <section id="top_header" class="bg-dark py-3 d-none d-md-block">
+        <section id="top_header" class="bg-dark py-3">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 pt-2 text-white text-center">
