--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-center" id="social-media">
                         <a href="#" class="btn text-white" style="background: #166FE5;">
                             <i class="bi bi-facebook"></i>
                         </a>
