--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section id="top_header" class="bg-dark py-3">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2 text-white text-center" id="header_phone">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
