--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
         <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top">
             <div class="container">
-                <a href="#" class="navbar-brand w-50 text-center">Learn Code</a>
+                <a href="#" class="navbar-brand">Learn Code</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
             <div id="navMenu" class="collapse navbar-collapse">
-                <ul class="navbar-nav align-items-center">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
