--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
                 </button>
                 <div id="navMenu" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#about" class="nav-link">About</a>
-                        </li>
+                        <div class="row">
+                            <div class="col-6"></div>
+                            <div class="col-6"></div>
+                        </div>
                         <li class="nav-item">
                             <a href="#service" class="nav-link">Service</a>
                         </li>
