--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top w-100 d-flex justify-content-center">
+        <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top">
             <div class="container">
                 <a href="#" class="navbar-brand">Learn Code</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
