--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
                                 </li>
                             </div>
                         </div>
-                        <li class="nav-item">
-                            <a href="#service" class="nav-link">Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#analysis" class="nav-link">Analysis</a>
-                        </li>
+                        <div class="row justify-content-center">
+                            <li class="nav-item">
+                                <a href="#service" class="nav-link">Service</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#analysis" class="nav-link">Analysis</a>
+                            </li>
+                        </div>
                         <li class="nav-item">
                             <a href="#team" class="nav-link">Team</a>
                         </li>
