--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <li class="nav-item">
-                                <a href="#service" class="nav-link">Service</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#analysis" class="nav-link">Analysis</a>
-                            </li>
+                            <div class="col-4">
+                                <li class="nav-item">
+                                    <a href="#service" class="nav-link">Service</a>
+                                </li>
+                            </div>
+                            <div class="col-4">
+                                <li class="nav-item">
+                                    <a href="#analysis" class="nav-link">Analysis</a>
+                                </li>
+                            </div>
                         </div>
                         <div class="row justify-content-center">
                             <li class="nav-item">
