--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                         <div class="row justify-content-center">
                             <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#service" class="nav-link">Service</a>
+                                    <a href="#service" class="nav-link text-center">Service</a>
                                 </li>
                             </div>
                             <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#analysis" class="nav-link">Analysis</a>
+                                    <a href="#analysis" class="nav-link text-center">Analysis</a>
                                 </li>
                             </div>
                         </div>
