--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                         <div class="row justify-content-center">
                             <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#team" class="nav-link">Team</a>
+                                    <a href="#team" class="nav-link text-center">Team</a>
                                 </li>
                             </div>
                             <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#contact" class="nav-link">Contact</a>
+                                    <a href="#contact" class="nav-link text-center">Contact</a>
                                 </li>
                             </div>
                         </div>
