--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <i class="bi bi-facebook"></i>
                         </a>
                         <a href="#" class="btn text-white" style="background: #1D9BF0;">
-                            <i class="bi bi-twitter"></i>
+                            <i class="bi-twitter"></i>
                         </a>
                         <a href="#" class="btn text-white" style="background: #F70269;">
                             <i class="bi bi-instagram"></i>
